--- a/EjercicioPrueba.html
+++ b/EjercicioPrueba.html
@@ -23,7 +23,7 @@
     <footer>
         <p>thedoctorniko@gmail.com</p>
         <p>620 30 40 50</p>
-        <p>Link: <a>href = "https://www.instagram.com/"</a></p>
+        <a href = "https://www.instagram.com/">Insta</a>
     </footer>
 </body>
 </html>
