--- a/EjercicioPrueba.html
+++ b/EjercicioPrueba.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Documento</title>
+        <title>Presentacion</title>
     </head>
 <body> 
     <header>
@@ -13,6 +13,7 @@
 
     <main>
         <p>Soy Nicolas me gusta hacer deporte y la musica</p>
+        <h3>Habilidades</h3>
         <ul>
             <li>Futbol</li>
             <li>Vela</li>
@@ -21,9 +22,10 @@
     </main>
     
     <footer>
+        <h3>Datos de contacto</h3>
         <p>thedoctorniko@gmail.com</p>
         <p>620 30 40 50</p>
-        <a href = "https://www.instagram.com/">Insta</a>
+        <a href = "https://www.instagram.com/">Instagram</a>
     </footer>
 </body>
 </html>
