--- a/EjercicioPrueba.html
+++ b/EjercicioPrueba.html
@@ -12,7 +12,7 @@
     </header>
 
     <main>
-        <p>Soy Nicolas me gusta hacer deporte y la musica</p>
+        <p>Soy Nicolas me gusta hacer deporte y escuchar musica</p>
         <h3>Habilidades</h3>
         <ul>
             <li>Futbol</li>
