--- a/PruebaJavaScript/Prueba.html
+++ b/PruebaJavaScript/Prueba.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="UTF-8">
         <script type = "text/javascript" src = "PruebaJavaScript.js"></script>
     </head>
 </html>
