--- a/EjercicioGaleria/galeria.html
+++ b/EjercicioGaleria/galeria.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galeria</title>
+    <title>GaleriaFotos</title>
     <script src = "scripts.js"></script>
 </head>
 <body>
     <div id = "gallery">
         <button id = "prevButton" onclick = "prev()">Anterior</button>
-        <img id = "image" src = "EjercicioGaleria/lambo01.jpg">
+        <img id = "image" src = "images/lambo01.jpg">
         <button id = "nextButton" onclick = "next()">Siguiente</button>
     </div>
 </body>
