--- a/EjercicioBootStrap/EjercicioBootStrap.html
+++ b/EjercicioBootStrap/EjercicioBootStrap.html
@@ -4,20 +4,19 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Carta</title>
+    <title>BootStrap</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    
 </head>
 <body>
     <header>
         <div class="container">
             <div class="row">
-                <div class="col-12 bg-primary mt-5 ">TITULO</div>
+                <div class="col-12 bg-primary mt-5"><h1>Titulo</h1></div>
             </div>
         </div>
     </header>
     <main>
-        <div class="container mt-5 col-md-4">
+        <div class="container mt-5 ">
             <div class="row">
                 <div class="col-12 col-md-4 ">
                     <div class="card" style="width: 18rem;">
@@ -52,7 +51,7 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-12 mt-5 bg-success">FOOTER</div>
+                <div class="col-12 mt-5 bg-success"><h1>Footer</h1></div>
             </div>
         </div>
     </footer>
