--- a/EjercicioBootStrap/EjercicioBootStrap.html
+++ b/EjercicioBootStrap/EjercicioBootStrap.html
@@ -19,31 +19,31 @@
         <div class="container mt-5 ">
             <div class="row">
                 <div class="col-12 col-md-4 ">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card">
                         <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Tarjeta 1</h5>
                           <p class="card-text">Descripcion de la tarjeta 1.</p>
                         </div>
-                    </div>    
+                      </div>    
                 </div>
                 <div class="col-12 col-md-4">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card">
                         <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Tarjeta 2</h5>
                           <p class="card-text">Descripcion de la tarjeta 2.</p>
                         </div>
-                    </div>    
+                      </div>    
                 </div>
                 <div class="col-12 col-md-4">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card" >
                         <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Tarjeta 3</h5>
                           <p class="card-text">Descripcion de la tarjeta 3.</p>
                         </div>
-                    </div>    
+                      </div>    
                 </div>
             </div>
         </div>
