--- a/EjercicioBootStrap/indexBootStrapMade.html
+++ b/EjercicioBootStrap/indexBootStrapMade.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel = "stylesheet" href = "https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel = "stylesheet" href = "main.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -16,13 +18,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Inicio<span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Cursos</a>
+            <a class="nav-link" href="#">Inicio<span class="sr-only"></span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Tutoriales</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Descargas</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Contacto</a>
@@ -30,6 +32,155 @@
         </ul>
       </div>
     </nav>
+    
+    <div id="carouselExampleIndicators" class="carousel slide">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="img/slider-1.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="img/slider-2.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="img/slider-3.jpg" class="d-block w-100" alt="...">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+
+    <div class = "container mt-5">
+      <div class="row align-items-start">
+        <h2 class = "text-center">Acerca de</h2>
+        <div class = "col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, mollitia cum culpa natus, laboriosam ratione dolore impedit nostrum distinctio error doloribus, veritatis debitis similique. Harum aspernatur nihil ex iusto magni!</div>
+        <div class = "col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae dolorum, sequi nihil saepe possimus repudiandae, exercitationem, quibusdam nam quam explicabo officia fugit at perferendis? Minus aut soluta quidem alias minima.</div>
+      </div>
+    </div>
+    
+    <div class = "container mt-5 d-none d-md-block">
+      <div class = "row">
+        <div class = "col-md-4">
+          <div class = "card border-0 text-center">
+            <img src = "img/card-1.jpg" class = "card-img-top rounded-circle" alt = "...">
+            <div class = "card-body">
+              <h5 class = "card-title">Máster</h5>
+              <p class = "card-test">Some quick example text build on the card title and make up the bulk of the card´s content.</p>
+              <a href = "#" class = "btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+
+        <div class = "col-md-4">
+          <div class = "card border-0 text-center">
+            <img src = "img/card-2.jpg" class = "card-img-top rounded-circle" alt = "...">
+            <div class = "card-body">
+              <h5 class = "card-title">Máster</h5>
+              <p class = "card-test">Some quick example text build on the card title and make up the bulk of the card´s content.</p>
+              <a href = "#" class = "btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+
+        <div class = "col-md-4">
+          <div class = "card border-0 text-center">
+            <img src = "img/card-3.jpg" class = "card-img-top rounded-circle" alt = "...">
+            <div class = "card-body">
+              <h5 class = "card-title">Máster</h5>
+              <p class = "card-test">Some quick example text build on the card title and make up the bulk of the card´s content.</p>
+              <a href = "#" class = "btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class = "container">
+      <div class = "card mb-3 border-0">
+        <div class = "row g-0">
+          <div class = "col-md-5">
+            <img src = "img/slider-3.jpg" class = "img-fluid rounded-start" alt = "...">
+          </div>
+          <div class = "col-md-7">
+            <div class = "card-body">
+              <h2 class = "card-title">DATA ANALYTICS MASTER</h2>
+              <p class = "card-text">This is a wider card with supporting text below as a natural lead-in
+                to additional content. This content is a little bit longer. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates quos doloremque eius iste, inventore nam labore eveniet nostrum harum beatae dignissimos, dolores error ratione expedita eaque aliquam quis tempore! Voluptatum?
+              </p>
+              <div class = "text-center"><a href = "#" class = "btn btn-success btn-lg">INSCRIBIR</a></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class = "container">
+      <div class = "card mb-3 border-0">
+        <div class = "row g-0">
+          <div class = "col-md-7">
+            <div class = "card-body">
+              <h2 class = "card-title">DATA ANALYTICS MASTER</h2>
+              <p class = "card-text">This is a wider card with supporting text below as a natural lead-in
+                to additional content. This content is a little bit longer. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates quos doloremque eius iste, inventore nam labore eveniet nostrum harum beatae dignissimos, dolores error ratione expedita eaque aliquam quis tempore! Voluptatum?
+              </p>
+              <div class = "text-center"><a href = "#" class = "btn btn-success btn-lg">INSCRIBIR</a></div>
+            </div>
+          </div>
+          <div class = "col-md-5">
+            <img src = "img/slider-2.jpg" class = "img-fluid rounded-start" alt = "...">
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class = "container">
+      <div class = "card mb-3 border-0">
+        <div class = "row g-0">
+          <div class = "col-md-5">
+            <img src = "img/slider-1.jpg" class = "img-fluid rounded-start" alt = "...">
+          </div>
+          <div class = "col-md-7">
+            <div class = "card-body">
+              <h2 class = "card-title">DATA ANALYTICS MASTER</h2>
+              <p class = "card-text">This is a wider card with supporting text below as a natural lead-in
+                to additional content. This content is a little bit longer. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates quos doloremque eius iste, inventore nam labore eveniet nostrum harum beatae dignissimos, dolores error ratione expedita eaque aliquam quis tempore! Voluptatum?
+              </p>
+              <div class = "text-center"><a href = "#" class = "btn btn-success btn-lg">INSCRIBIR</a></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <footer>
+      <div class = "container-fluid bg-dark p-5 text-center">
+        <div class = "row">
+          <div class = "col">
+            <a href = "#" class = "text-decoration-none text-success"><i class = "bi bi-facebook"></i>Masters</a>
+          </div>
+          <div class = "col">
+            <a href = "#" class = "text-decoration-none text-success">Tutoriales</a>
+          </div>
+          <div class = "col">
+            <a href = "#" class = "text-decoration-none text-success">Descargas</a>
+          </div>
+          <div class = "col">
+            <a href = "#" class = "text-decoration-none text-success">Contacto</a>
+          </div>
+        </div>
+      </div>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
