--- a/Practica_1/index.html
+++ b/Practica_1/index.html
@@ -4,12 +4,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Piedra, papel o tijera</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-    
-    <script src="scripts.js"></script>
+    <header>
+        <div class = "container text-center mt-5">
+            <div class="row align-items-start">
+                <div class = "col-12">
+                    <h1>Piedra, papel o tijera</h1>
+                    <div class="dropdown mt-4">
+                        <button class="btn btn-secondary dropdown-toggle btn-lg" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Jugadores
+                        </button>
+                        <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" onclick="set_0()">0</a></li>
+                        <li><a class="dropdown-item" onclick="set_1()">1</a></li>
+                        <li><a class="dropdown-item" onclick="set_2()">2</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main>
+        <div class = "container text-center mt-4">
+            <div class="row align-items-start">
+                <div class = "col-12">
+                    <button type="button" class="btn btn-success btn-lg" onclick = "empezar()">JUGAR</button>
+                    <button type="button" class="btn btn-danger btn-lg" onclick = "finalizar()">FINAL</button>
+                </div>
+            </div>
+        </div>
+        <div class = "container text-center mt-5">
+            <div class="row justify-content-center">
+                <div class = "col-6">
+                    <div class="card mx-auto" style="width: 18rem;">
+                        <img src="images/default.png" class="card-img-top" id = "img1">
+                        <div class = "card-header">
+                            <h5 id = "jugador1"></h5>
+                        </div>
+                        <div class="card-body">
+                            <p class = "text-center">Puntuacion<p id = "puntuacion1"></p></p>
+                        </div>
+                    </div>
+                </div>
+                <div class = "col-6">
+                    <div class="card mx-auto " style="width: 18rem;">
+                        <img src="images/default.png" class="card-img-top" id = "img2">
+                        <div class = "card-header">
+                            <h5 id = "jugador2"></h5>
+                        </div>
+                        <div class="card-body">
+                            <p class = "text-center">Puntuacion<p id = "puntuacion2"></p></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="scripts.js"></script>
 </html>
